--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Some sample tests for a license plate store",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "cleanup": "git clean -fd && git reset --hard"
   },
   "repository": {
     "type": "git",
