--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
   "homepage": "https://github.com/alcfeoh/ng-store-cypress#readme",
   "devDependencies": {
     "cypress": "^12.17.3"
+  },
+  "dependencies": {
+    "axios": "^1.4.0"
   }
 }
